# kgd

./: .editorconfig  .gitignore  CLAUDE.md  README.md  SPEC.md  flake.nix  go.mod  go.sum  justfile
.claude/: settings.json
.claude/commands/: review.md
.github/workflows/: ci.yml
bindings/c/: kgd.c  kgd.h
bindings/python/: pyproject.toml
bindings/python/kgdclient/: client.py
clients/c/: .clang-format  .clang-tidy  CMakeLists.txt  fuzz_msgpack.c  kgd.c  kgd.h  kgd_test.c
clients/c/corpus/: notify_evicted  notify_theme  notify_topology  notify_visibility  response_err  response_list  response_ok
clients/dotnet/: .editorconfig  KgdClient.sln
clients/dotnet/KgdClient/: Client.cs  KgdClient.csproj  Protocol.cs  Types.cs
clients/dotnet/KgdClient.Tests/: ClientTests.cs  KgdClient.Tests.csproj
clients/jvm/: build.gradle.kts  settings.gradle.kts
clients/jvm/src/main/kotlin/com/kgd/client/: Client.kt  Protocol.kt  Types.kt
clients/jvm/src/test/kotlin/com/kgd/client/: ClientTest.kt
clients/lua/: .luacheckrc  kgd-client-0.1-1.rockspec
clients/lua/kgd/: init.lua  protocol.lua  socket.lua
clients/lua/spec/: client_spec.lua
clients/nodejs/: .prettierrc  eslint.config.js  package-lock.json  package.json  tsconfig.json
clients/nodejs/src/: index.ts  protocol.ts
clients/nodejs/test/: client.test.ts
clients/ocaml/: dune-project  kgd-client.opam
clients/ocaml/lib/: dune  kgd_client.ml  kgd_client.mli  protocol.ml  protocol.mli
clients/ocaml/test/: dune  test_client.ml
clients/python/: pyproject.toml
clients/python/kgdclient/: __init__.py  client.py
clients/python/tests/: test_types.py
clients/rust/: Cargo.toml
clients/rust/src/: error.rs  lib.rs  protocol.rs
clients/rust/tests/: integration.rs
clients/swift/: Package.swift
clients/swift/Sources/KgdClient/: Client.swift  Protocol.swift  Types.swift
clients/swift/Tests/KgdClientTests/: ClientTests.swift
clients/zig/: build.zig  build.zig.zon
clients/zig/src/: client.zig  protocol.zig  types.zig
clients/zig/test/: client_test.zig
cmd/kgd/: main.go
internal/allocator/: id.go
internal/cli/: clear.go  diagnose.go  init.go  list.go  notify.go  place.go  root.go  serve.go  status.go  stop.go  unplace.go  upload.go
internal/daemon/: daemon.go
internal/engine/: engine.go  engine_test.go  events.go  notifier.go  placement.go
internal/graphics/: graphics.go  tty.go
internal/kitty/: kitty.go  kitty_test.go
internal/logging/: logging.go
internal/protocol/: types.go
internal/rpc/: client.go  client_test.go  dispatch.go  server.go
internal/topology/: tmux.go  tmux_test.go  win_registry.go
internal/tty/: colors.go  colors_test.go  tty.go
internal/upload/: cache.go
nvim/lua/kgd/: client.lua  init.lua  tracker.lua
nvim/plugin/: kgd.lua
pkg/kgdclient/: client.go  client_test.go
pkg/kgdsocket/: socket.go
scripts/: test-render.sh
