opam-version: "2.0"
name: "kgd-client"
version: "0.1.0"
synopsis: "OCaml client library for kgd (Kitty Graphics Daemon)"
description: """
Client library for communicating with kgd over Unix domain sockets
using msgpack-RPC. Provides typed access to all 12 RPC methods and
4 server notification callbacks.
"""
license: "MIT"
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.0" & build}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
